code cleanups - make IsSensitive a required field
